Refacto user service : refacto group service
Signed-off-by: freddidierRTE <frederic-f.didier@rte-france.com>